# using-rust-in-kmp

./: .gitignore  README.md  justfile
kmp/: gradle.properties  settings.gradle.kts
kmp/composeApp/: build.gradle.kts
kmp/composeApp/src/androidMain/kotlin/live/ditto/droidcon/rust_in_kmp/: App.kt  MainActivity.kt
kmp/composeApp/src/commonMain/kotlin/live/ditto/droidcon/rust_in_kmp/: App.kt  Greeting.kt  Platform.kt
kmp/composeApp/src/iosMain/kotlin/live/ditto/droidcon/rust_in_kmp/: MainViewController.kt  Platform.ios.kt
kmp/gradle/: libs.versions.toml
kmp/iosApp/Configuration/: Config.xcconfig
kmp/iosApp/iosApp/: ContentView.swift  SimpleCalculatorView.swift  iOSApp.swift
kmp/iosApp/iosApp.xcodeproj/: project.pbxproj
kmp/iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
kmp/shared/: CMakeLists.txt  build.gradle.kts
kmp/shared/src/androidMain/kotlin/live/ditto/droidcon/rust_in_kmp/: Calc.android.kt  Platform.android.kt
kmp/shared/src/androidNativeMain/kotlin/live/ditto/droidcon/rust_in_kmp/: Calc.androidNative.kt  Platform.androidNative.kt
kmp/shared/src/commonMain/kotlin/live/ditto/droidcon/rust_in_kmp/: Calc.kt
kmp/shared/src/cpp/: dummy.cpp
kmp/shared/src/iosMain/kotlin/live/ditto/droidcon/rust_in_kmp/: Calc.ios.kt  Platform.ios.kt
kmp/shared/src/nativeInterop/cinterop/: rust.def
rust/: Cargo.toml  rust.h
rust/src/: lib.rs
